styles.css
/* ... */
/* Dark Mode Toggle */
.theme-switch-wrapper {
  display: flex;
  align-items: center;
  z-index: 100;
}

.theme-switch-wrapper span {
  margin-right: 10px;
  font-size: 1rem;
}

.theme-switch {
  display: inline-block;
  height: 2.5rem;
  position: relative;
  width: 5rem;
}

.theme-switch input {
  display: none;
}

.slider {
  background: #ccc;
  bottom: 0;
  cursor: pointer;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: 0.4s;
}

.slider::before {
  background: #fff;
  bottom: 4px;
  content: "";
  height: 2rem;
  left: 4px;
  position: absolute;
  transition: 0.4s;
  width: 1.9rem;
}

input:checked + .slider {
  background: var(--primary-color);
}

input:checked + .slider::before {
  transform: translateX(2.6rem);
}

.slider.round {
  border-radius: 34px;
}

.slider.round::before {
  border-radius: 50%;
}

.fas {
  font-size: var(--mid-font-size);
  margin-right: 5px;
}

.header-scrolled {
  background-color: var(--header-scrolled)
}

header a {
  text-decoration: none;
}

header {
  padding: 0 20px;
  height: 4.5rem;
  display: flex;
  justify-content: space-between;
}

ul {
  list-style: none;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

ul a {
  color: var(--font-color);
}

ul li {
  padding: 5px;
  margin-left: 10px;
}

#navbar > ul > li {
  white-space: nowrap;
  padding: 10px 0 10px 30px;
}

#navbar a,
#navbar a:focus {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--font-color);
  font-size: var(--defaultMid-font-size);
  font-weight: 600;
  padding: 0;
  white-space: nowrap;
  transition: 0.3s;
  letter-spacing: 0.4px;
  position: relative;
  text-transform: uppercase;
}

#navbar a i,
#navbar a:focus i {
  font-size: var(--small-font-size);
  line-height: 0;
  margin-left: 5px;
}

#navbar > ul > li > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -6px;
  left: 0;
  width: 0;
  visibility: hidden;
  transition: all 0.3s ease-in-out 0s;
}

#navbar a:hover:before,
#navbar li:hover > a:before,
#navbar .active:before {
  visibility: visible;
  width: 80%;
}

#navbar a:hover,
#navbar .active,
#navbar .active:focus,
#navbar li:hover > a {
  color: var(--primary-color)
}

.logo {
  font-weight: 500;
  font-size: 3rem;
  display: flex;
  align-items: center;
  cursor: pointer;
  color: var(--font-color);
}

.nav-toggle {
  color: var(--font-color);
  font-size: var(--default-font-size);
  display: none;
  cursor: pointer;
}

/* Style the hamburger menu */
#nav-toggle {
  margin: auto 0;
  display: none;
  cursor: pointer;
  padding-top: 1rem;
}

#nav-toggle div {
  width: 3.8rem;
  height: 0.5rem;
  background-color: var(--font-color);
  margin: 8px 0;
  transition: 0.4s;
}

.open .bar1 {
  -webkit-transform: rotate(-45deg) translate(-0.9rem, 0.5rem);
  transform: rotate(-45deg) translate(-0.9rem, 0.5rem);
}

.open .bar2 {
  opacity: 0;
}

.open .bar3 {
  -webkit-transform: rotate(45deg) translate(-0.9rem, 0.5rem);
  transform: rotate(45deg) translate(-0.9rem, -0.5rem);
}

.open #navbar-mobile {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  
}

#navbar-mobile {
  position: fixed;
  animation: fadeIn 0.4s;
  right: 0;
  height: auto;
  border-radius: 15%;
  background: rgba(104, 104, 104, 0.7);
}

#navbar-mobile a {
  color: white;
  font-size: var(--mid-font-size);
}

#navbar-mobile a:hover {
  text-decoration: underline;
}

@media (max-width: 991px) {
  #navbar ul {
    display: none;
  }

  #nav-toggle {
    display: block;
  }

  header {
    height: 9rem;
  }

  .theme-switch-wrapper {
    padding-right: 4rem;
  }
}

/*--------------------------------------------------------------
                            HERO
--------------------------------------------------------------*/
#hero {
  display: flex;
  justify-content: center;
  color: var(--font-color);
}

.hero__pic-container {
  display: flex;
  height: 25rem;
  width: 40rem;
  margin: auto 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: bounce;
  animation-timing-function: ease;
}

.hero-content {
  align-self: center;
  text-align: center;
}

.hero-title {
  color: var(--font-color);
  font-weight: 600;
  font-size: 2.5rem;
}

.hero-title,
.introText,
.introName,
.introPara {
  animation: fadeIn 2s;
}

.introPara {
  font-size: 1.5rem;
}

.introName {
  font-weight: 600;
  color: var(--primary-color);
  font-size: var(--big-font-size);
}

.greetings-animation {
  font-size: 2.5rem;
  font-weight: 600;
}

.greetings-animation span {
  position: relative;
}

.greetings-animation span::before {
  content: "Hello";
  color: var(--font-color);
  animation: words 15s infinite;
}

.greetings-animation span::after {
  content: "";
  background-color: var(--background-color);
  color: var(--font-color);
  position: absolute;
  width: calc(100% + 8px);
  height: 100%;
  border-left: 3px solid var(--primary-color);
  right: -8px;
  animation: cursor 0.6s infinite, typing 15s infinite;

}

@keyframes bounce {
  0%   { transform: translateY(0); }
  50%  { transform: translateY(-20px); }
  100% { transform: translateY(0); }
}

@keyframes cursor {
  to {
    border-left: 2px solid whitesmoke;
  }
}

@keyframes words {
  0%,
  20% {
    content: "Bonjour !"
  }
  21%,
  40% {
    content: "你好 !";
  }
  41%,
  60% {
    content: "こんにちは !"
  }
  61%,
  80% {
    content: "안녕하세요 !";
  }
  81%,
  100% {
    content: "Hello !";
  }
}

@keyframes typing {
  10%,
  15%,
  30%,
  35%,
  50%,
  55%,
  70%,
  75%,
  90%,
  95% {
    width: 0;
  }
  5%,
  20%,
  25%,
  40%,
  45%,
  60%,
  65%,
  80%,
  85% {
    width: calc(100% + 8px);
  }
}

@media (max-width: 991px) {
  #hero {
    flex-direction: column;
  }

  .introName {
    font-size: 3rem;
  }

  .hero-title {
    font-size: 3rem;
  }

  .introPara {
    font-size: 2.2rem;
  }

  .hero__pic-container {
    margin: 5rem;
  }
}
/* ... */

